--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,6 @@ pandas = "^1.5.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+rewards = 'rewards.__main__:main'
