--- a/requirements.txt
+++ b/requirements.txt
@@ -1,215 +1,8 @@
-absl-py==1.4.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==22.2.0
-backcall==0.2.0
-beautifulsoup4==4.11.2
-black==23.1.0
-bleach==6.0.0
-blessed==1.20.0
-build==0.10.0
-CacheControl==0.12.11
-cffi==1.15.1
-charset-normalizer==3.1.0
-cleo==2.0.1
-click==8.1.3
-cmake==3.26.0
-comm==0.1.2
-contourpy==1.0.7
-crashtest==0.4.1
-croniter==1.3.8
-cryptography==39.0.2
-cycler==0.11.0
-dateutils==0.6.12
-debugpy==1.6.6
-decorator==4.4.2
-deepdiff==6.3.0
-defusedxml==0.7.1
-distlib==0.3.6
-dnspython==2.3.0
-dulwich==0.21.3
-email-validator==1.3.1
-executing==1.2.0
-fastapi==0.88.0
-fastjsonschema==2.16.3
-filelock==3.10.0
-flatbuffers==23.3.3
-fonttools==4.39.2
-fqdn==1.5.1
-frozenlist==1.3.3
-fsspec==2023.3.0
-h11==0.14.0
-html5lib==1.1
-httpcore==0.16.3
-httptools==0.5.0
-httpx==0.23.3
-idna==3.4
-imageio==2.26.1
-imageio-ffmpeg==0.4.8
-importlib-metadata==6.1.0
-inquirer==3.1.3
-installer==0.7.0
-ipykernel==6.21.3
-ipython==8.11.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-isort==5.12.0
-itsdangerous==2.1.2
-jaraco.classes==3.2.3
-jedi==0.18.2
-jeepney==0.8.0
-Jinja2==3.1.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter_client==8.0.3
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-kaggle==1.5.13
-keyring==23.13.1
-kiwisolver==1.4.4
-lightning==2.0.0
-lightning-cloud==0.5.31
-lightning-utilities==0.8.0
-lit==15.0.7
-lockfile==0.12.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mediapipe==0.9.1.0
-mistune==2.0.5
-more-itertools==9.1.0
-moviepy==1.0.3
-mpmath==1.3.0
-msgpack==1.0.5
-multidict==6.0.4
-mypy-extensions==1.0.0
-nbclassic==0.5.3
-nbclient==0.7.2
-nbconvert==7.2.10
-nbformat==5.7.3
-nest-asyncio==1.5.6
-networkx==3.0
-notebook==6.5.3
-notebook_shim==0.2.2
-numpy==1.24.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-opencv-contrib-python==4.7.0.72
-opencv-python==4.7.0.72
-ordered-set==4.1.0
-orjson==3.8.7
-packaging==23.0
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.11.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.4.0
-pkginfo==1.9.6
-platformdirs==2.6.2
-poetry==1.4.1
-poetry-core==1.5.2
-poetry-plugin-export==1.3.0
-proglog==0.1.10
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-protobuf==3.20.3
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==1.10.6
-pygame==2.3.0
-Pygments==2.14.0
-PyJWT==2.6.0
-pyparsing==3.0.9
-pyproject_hooks==1.0.0
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.1
-pyqtgraph==0.13.2
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-editor==1.0.4
-python-json-logger==2.0.7
-python-multipart==0.0.6
-python-slugify==8.0.1
-pytorch-lightning==2.0.0
-pytz==2022.7.1
-PyYAML==6.0
-pyzmq==25.0.2
-qtconsole==5.4.1
-QtPy==2.3.0
-rapidfuzz==2.13.7
-readchar==4.0.5
-requests==2.28.2
-requests-toolbelt==0.10.1
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rich==13.3.2
-SecretStorage==3.3.3
-Send2Trash==1.8.0
-shellingham==1.5.0.post1
-six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4
-stack-data==0.6.2
-starlette==0.22.0
-starsessions==1.3.0
-sympy==1.11.1
-terminado==0.17.1
-text-unidecode==1.3
-tinycss2==1.2.1
-tomli==2.0.1
-tomlkit==0.11.6
+--find-links https://download.pytorch.org/whl/cpu
 torch==2.0.0
-torchaudio==2.0.1
-torchmetrics==0.11.4
-torchvision==0.15.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-triton==2.0.0
-trove-classifiers==2023.3.9
-typing_extensions==4.5.0
-ujson==5.7.0
-uri-template==1.2.0
-urllib3==1.26.15
-uvicorn==0.21.1
-uvloop==0.17.0
-virtualenv==20.21.0
-watchfiles==0.18.1
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.1
-websockets==10.4
-widgetsnbextension==4.0.5
-yarl==1.8.2
-zipp==3.15.0
+
+wandb 
+pygame 
+pandas 
+numpy 
+scikit-learn 
