--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,25 @@
-# NOTE: pytorch and lightning must be installed first by the user 
-
 [tool.poetry]
 name = "rewards"
-version = "0.1.0"
-description = "Start learning about RL and make model and envs in minutes in just few lines of code"
-authors = ["rewards.ai"]
+version = "1.0.2"
+description = "A low code sdk for crearing custom environments and deep RL agents."
+authors = ["Anindyadeep <2005641@kiit.ac.in>"]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+matplotlib = "^3.7.1"
+torch = "^2.0.0"
+lightning = "^2.0.1"
 pygame = "^2.3.0"
+numpy = "^1.24.2"
 PyQt5 = "^5.15.9"
 pyqtgraph = "^0.13.2"
-numpy = "^1.24.2"
-matplotlib = "^3.7.1"
+wandb = "^0.14.0"
+scikit-learn = "^1.2.2"
 pandas = "^1.5.3"
+
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.scripts]
-rewards = 'rewards.__main__:main'
