--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,17 @@ jobs:
         python-version: [3.9]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Delete dist directory if exists
+        run: |
+          if [ -d "dist" ]; then
+            rm -rf dist/
+          fi
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
