--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,18 +15,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+      - name: Install Poetry
+        uses: shivammathur/setup-poetry@v1
+      - name: Install Dependencies
+        run: poetry install
       - name: Build and publish
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
-          python setup.py sdist bdist_wheel
+          poetry build
           twine upload --repository pypi dist/*
