--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 # NOTE: pytorch and lightning must be installed first by the user 
 
 [tool.poetry]
-name = "rewards"
+name = "rewardsAI"
 version = "0.0.0.11"
 description = "Start learning about RL and make model and envs in minutes in just few lines of code"
 authors = ["rewards.ai"]
