--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,4 +24,4 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
         run: |
           poetry build
-          twine upload --repository pypi dist/*
+          twine upload --skip-existing --repository pypi dist/*
