FEAT: major code updates
1. Added algorithm module which will contain all algorithms
2. Added memory module for managing memory while training.
3. Added multi-agent support
4. fixed bugs

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ dist
 test.py
 models
 setup.py
+test_pred.py
+test_pred_v0.py
+other_test.py
+saved_models
+rewards/__pycache__
+test_pred_v0,py
+test_pred.py
+test.py
