--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,17 @@ car-single-trainner
 ./cartpole
 ./Snake-multi
 rewards.egg-info
-rewards/__pycache__
-rewards/envs/__pycache__
 build 
 dist 
 TODO
 dist
-test.py
 models
 setup.py
 test_pred.py
 test_pred_v0.py
 other_test.py
 saved_models
-rewards/__pycache__
 test_pred_v0,py
 test_pred.py
 test.py
+**/__pycache__
